# sokol-vita-pvr-psp2

./: .gitignore  CMakeLists.txt  README.md
module/: libGLESv1_CM.suprx
src/: main.c
